--- a/public/candidatepage.html
+++ b/public/candidatepage.html
@@ -200,23 +200,16 @@
 	            var userEmail = firebase.auth().currentUser.email;
 	            var dbRef = db.ref();
 	            var str = "";
-				var admins = ["dylantran@berkeley.edu", "ramk@berkeley.edu"];
-
 
 	            dbRef.once('value').then(function(snapshot) {
 
 	            	document.getElementById("spinner").style.display = "none";
-					var found = 0;
+
 	            	snapshot.forEach(function(candidateSnapshot) {
 	            		var candidate = candidateSnapshot.val();
 
-						if (admins.includes(userEmail)) { // not secure
-							console.log("YEAH")
-							window.location = "adminpanel.html?name=" + name;
-							found = 1;
-						} else if (candidate.Email === userEmail) {
-							found = 1;
-							console.log("top", found);
+						if (candidate.Email === userEmail) {
+
 	            			candidateSnapshot.forEach(function(candidateAttribute) {
 
 	            				var key = candidateAttribute.key;
