--- a/public/checkin.html
+++ b/public/checkin.html
@@ -25,18 +25,18 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img id="profile-image" src="images/upelogo.png" alt="" /></span>
-							<h1 id="name"></h1>
+							<!-- <h1 id="name"></h1>
 							<p id="candidate-info"></p>
-							<!-- <div id="spinner" class="spinner"></div> -->
-	<!-- 							<p id="Challenge"></p>
-							<p id="Officer Chat"></p>
-							<p id="Prof"></p>
-							<p id="Social"></p> -->
+							<div id="spinner" class="spinner"></div>
+							<p id="Challenge">hello</p>
+							<p id="Officer Chat">hello</p>
+							<p id="Prof">hello</p>
+							<p id="Social">hello</p> -->
 
 						</header>
-						<!--
-						<hr />
-						<h2>Extra Stuff!</h2>
+
+						<h2>Check in</h2>
+						<hr/>
 						<form method="post" action="#">
 							<div class="fields">
 								<div class="field">
@@ -47,30 +47,32 @@
 								</div>
 								<div class="field">
 									<select name="department" id="department">
-										<option value="">Department</option>
-										<option value="sales">Sales</option>
-										<option value="tech">Tech Support</option>
-										<option value="null">/dev/null</option>
+										<option value="">Officer Chat</option>
+										<option value="sales">Social Event</option>
+										<option value="tech">Professional Event</option>
+										<option value="null">Officer Challenge</option>
+										<option value="null"></option>
 									</select>
 								</div>
-								<div class="field">
+								<!-- <div class="field">
 									<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
-								</div>
-								<div class="field">
+								</div> -->
+								<!-- <div class="field">
 									<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
-								</div>
-								<div class="field">
+								</div> -->
+								<!-- <div class="field">
 									<label>But are you a robot?</label>
 									<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
 									<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
-								</div>
+								</div> -->
 							</div>
+							<hr />
 							<ul class="actions special">
 								<li><a href="#" class="button">Get Started</a></li>
 							</ul>
 						</form>
-						<hr />
-						-->
+
+
 						<footer>
 							<ul class="icons">
 								<!-- <li id="quickstart-sign-in"><a href="#" class="signin">Sign In</a></li> -->
